[project]
name = "iqm-quantum-school-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dimod>=0.12.21",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "iqm-client>=32.1.1,<33.0",
    "iqm-qaoa>=1.38.1",
    "qrisp[iqm]>=0.7.14",
    "toolz>=1.1.0",
]
